DATE       AUTHOR       CHANGE
---------- ------------ -------------------------------------------------------
2004-12-08 allenb       Added new isInVolumeExclusive method for AABox.
                        NEW VERSION: 0.4.6
2004-11-25 allenb       Disable vector creation counting.  Only use this
                        when testing meta programming.  To much overhead.
                        NEW VERSION: 0.4.5
2004-11-10 allenb       Added static assert capabilities from John.
                        Fixed compile warnings from Dan.
2004-10-30 patrickh     Allow GMTL to be compiled with Visual C++ 7.0 again.
                        NEW VERSION: 0.4.3
2004-10-27 patrickh     PyGMTL data types can now be pickled.
                        NEW VERSION: 0.4.2
2004-09-22 allenb       Added build dependency for all settings used to create
                        gmtl-config script.
2004-09-22 allenb       Added new Gauss-Jordan implace matrix invert.
                        Fixed bug in matrix invert that was hard coded to 4x4
                        NEW VERSION: 0.4.1
2004-09-16 allenb       Merged vector expression templates onto head.
                        NEW VERSION: 0.4.0
2004-09-03 allenb       Added output overload for vector expressions.
2004-09-02 allenb       Added expression templates for vectors.
2004-08-30 allenb       Added meta programming for loop unrolling of VecBase
                        assignment.
                        Added meta programs for VecOps: lenSqr, equal, dot
2004-08-19 allenb       Added fast inverse square root.
2004-08-03 allenb       Refactored seg/tri intersection test to remove two
                        un-needed divisions.
2004-07-21 allenb       Refactored code for seg/line intersect with plane
                        to better handle border cases.
                        Added overloaded calls for Math::abs that call the
                        system method for float, double, long, and int.